# crewai-rs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benchmarks/: latest.md
examples/: flow_pipeline.rs  launch.yaml  mock_launch.rs  runtime_bench.rs
src/: agent.rs  crew.rs  error.rs  flow.rs  lib.rs  model.rs  spec.rs  task.rs  tool.rs
tests/: blueprint.rs  crew_runtime.rs  flow.rs  openai_model.rs
