[package]
name = "crewai-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust-native multi-agent orchestration framework inspired by CrewAI."
license = "MIT"
repository = "https://github.com/LongWeihan/crewai-rs"
homepage = "https://github.com/LongWeihan/crewai-rs"
readme = "README.md"
keywords = ["agents", "llm", "ai", "workflow", "crewai"]
categories = ["asynchronous", "development-tools"]

[dependencies]
async-trait = "0.1.89"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt", "sync", "time"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.5"
